# Classical_Machine_Learning

./: .dvcignore  .gitignore  GETTING_STARTED.md  RAWREADME.md  README.md  SSH_GUIDE.md  create_diagram.py  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  train.yml
config/: creditcard_config.yaml
data/raw/: .gitignore  creditcard_fraud.csv.dvc
notebooks/: feature_engg.ipynb  supervised_learning.ipynb
scripts/: gradio_app.py  train.py
src/: __init__.py  config.py  logger.py
src/data/: __init__.py  ingest.py  loader.py  validator.py
src/data/raw/: telco_customer_churn.csv.dvc
src/evaluation/: __init__.py  metrics.py  visualization.py
src/features/: __init__.py  engineering.py
src/models/: __init__.py  classical.py  ensemble.py  gradient_boosting.py  registry.py
src/training/: __init__.py  hyperparameter.py  trainer.py  validation.py
src/utils/: __init__.py  helpers.py  reproducibility.py
tests/: __init__.py  test_utils.py
