[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "classical-ml"
version = "0.1.0"
description = "Production-ready classical ML project with full lifecycle support"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "ML Team", email = "ml@example.com"}
]
license = {text = "MIT"}
keywords = ["machine-learning", "classical-ml", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "catboost>=1.0.0",
    "imbalanced-learn>=0.8.0",
    "optuna>=2.10.0",
    "shap>=0.41.0",
    "mlflow>=1.20.0",
    "PyYAML>=5.4.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=7.0.0",
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.7b0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/your-org/classical-ml"
Documentation = "https://github.com/your-org/classical-ml/wiki"
Repository = "https://github.com/your-org/classical-ml.git"
Issues = "https://github.com/your-org/classical-ml/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
